# mosquito

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/: Larvicide_Spots_Coords.csv  stripes.csv
mosquito/: model_predict.py  model_test.py  model_train.py  predict.py  score.py  segment_images.py  train.py  trainer.py
mosquito/pylib/: binary_jaccard_loss.py  const.py  iou_loss.py  layer_dataset.py  model_tester.py  model_trainer.py  predictor.py  scorer.py  simple_unet.py  stripe.py  tile.py  tile_dataset.py  trainer.py  trainer_engine.py  util.py
notebooks/: debug_model.ipynb  lidar.ipynb  segment_tiffs.ipynb  segment_tiffs_experiment.ipynb  stitch.ipynb  train.ipynb
notebooks/parked/: Experiment_SimulatedData.ipynb  Experiment_chickens.ipynb  chickens_r_us.ipynb  layers.ipynb  original_Experiment_SimulatedData.ipynb  original_Experiment_chickens.ipynb
