[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "mosquito"
version = "0.1.0"
description = ""
license = {file = "LICENSE"}
authors = []
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.12.1",
    "jupyter",
    "jupyterlab>=3.6.2",
    "jupyterlab-code-formatter",
    "jupyterlab-git>=0.40.1",
    "matplotlib>=3.7.0",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "tensorboard",
]
optional-dependencies.dev = [
    "ipyparallel>=8.6.0",
    "isort",
    "jupyter_nbextensions_configurator",
    "jupyterlab-lsp>=4.0.1",
    "jupyterlab-spellchecker>=0.7.2",
    "nbdime>=3.2.0",
    "neovim",
    "pre-commit",
    "pre-commit-hooks",
    "python-lsp-server[all]",
    "ruff",
]

[tool.ruff]
line-length = 88
extend-select = [
    "BLE",
    "C4",
    "D",
    "E",
    "ERA",
    "I",
    "ISC",
    "N",
    "NPY",
    "PD",
    "PGH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TCH",
    "TID",
    "UP",
    "YTT",
]
show-fixes = true
ignore = ["D10", "D203", "D213", "ERA001", "PD901", "RET504", "RUF001", "TID252"]
